Springboot exception handling and bean validation

--- a/SpringRabbitMqProducer/src/main/resources/application.properties
+++ b/SpringRabbitMqProducer/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.rabbitmq.password=guest
 javatechstack.rabbitmq.exchange=javatechstack.direct
 javatechstack.rabbitmq.routingkey=javatechstack.routingkey
 javatechstack.rabbitmq.queue=javatechstack.queue
+
+server.port=8081
+spring.rabbitmq.addresses: amqps://guest:guest@localhost/virtualhost
