--- a/forex-currency-microservice-app/forex-service/Dockerfile
+++ b/forex-currency-microservice-app/forex-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8
-ADD target/forex-service.jar forex-service.jar
-EXPOSE 8000
-ENTRYPOINT ["java", "-jar", "forex-service.jar"]
+ADD target/forex-service.jar app.jar
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap  -XX:MaxRAMFraction=1 -XshowSettings:vm "
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
