--- a/forex-currency-microservice-app/eureka-naming-server/Dockerfile
+++ b/forex-currency-microservice-app/eureka-naming-server/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8
-ADD target/eureka-service.jar eureka-service.jar
-EXPOSE 8070
-ENTRYPOINT ["java", "-jar", "eureka-service.jar"]
+ADD target/eureka-service.jar app.jar
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap  -XX:MaxRAMFraction=1 -XshowSettings:vm "
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
