--- a/springboot-sessionmanage-jdbc/src/main/resources/application.properties
+++ b/springboot-sessionmanage-jdbc/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/springSession?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost/springSession
 spring.datasource.username=root
 spring.datasource.password=murali
-spring.datasource.initialization-mode=always
 
 
 spring.session.store-type=jdbc
