--- a/counter-microservices-series-docker/configservice/pom.xml
+++ b/counter-microservices-series-docker/configservice/pom.xml
@@ -68,6 +68,7 @@
 					</execution>
 				</executions>
 				<configuration>
+				<serverId>docker.io</serverId>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 					<buildArgs>
