--- a/counter-microservices-series-docker/registryservice/pom.xml
+++ b/counter-microservices-series-docker/registryservice/pom.xml
@@ -67,6 +67,7 @@
 					</execution>
 				</executions>
 				<configuration>
+				<serverId>docker.io</serverId>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 					<buildArgs>
