--- a/counter-microservices-series-docker/configservice/pom.xml
+++ b/counter-microservices-series-docker/configservice/pom.xml
@@ -69,6 +69,8 @@
 				</executions>
 				<configuration>
 				<serverId>docker.io</serverId>
+				<username>muralimanohard</username>
+                <password>victory1</password>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 					<buildArgs>
