--- a/counter-microservices-series-docker/counterservice/pom.xml
+++ b/counter-microservices-series-docker/counterservice/pom.xml
@@ -95,6 +95,9 @@
 				</executions>
 				<configuration>
 				<serverId>docker.io</serverId>
+								<username>muralimanohard</username>
+                <password>victory1</password>
+				
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 					<buildArgs>
