--- a/counter-microservices-series-docker/registryservice/pom.xml
+++ b/counter-microservices-series-docker/registryservice/pom.xml
@@ -68,6 +68,9 @@
 				</executions>
 				<configuration>
 				<serverId>docker.io</serverId>
+								<username>muralimanohard</username>
+                <password>victory1</password>
+				
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
 					<buildArgs>
