--- a/counter-microservices-series-docker/configservice/Jenkinsfile
+++ b/counter-microservices-series-docker/configservice/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             steps {
                 echo 'Maven Build' 
                 withMaven(maven : 'apache-maven-3.6.0') {
-                    sh 'mvn clean install'           
+                    bat 'mvn clean install -DskipTests'           
                  }
             }
         }
