--- a/counter-microservices-series-docker/configservice/Jenkinsfile
+++ b/counter-microservices-series-docker/configservice/Jenkinsfile
@@ -17,7 +17,8 @@ pipeline {
             steps {
                 echo 'Maven Build' 
                 withMaven(maven : 'apache-maven-3.6.0') {
-                bat 'mvn -f ./counter-microservices-series-docker/configservice/pom.xml clean install'
+                def mavhd = "${workspace}/counter-microservices-series-docker/configservice" 
+                bat "mvn -f /${mavhd}/pom.xml clean install"
                  }
             }
         }
