--- a/counter-microservices-series-docker/configservice/Jenkinsfile
+++ b/counter-microservices-series-docker/configservice/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             steps {
                 echo 'Maven Build' 
                 withMaven(maven : 'apache-maven-3.6.0') {
-                bat "mvn -f $WORKSPACE/counter-microservices-series-docker/configservice/pom.xml clean install"
+                bat "mvn $WORKSPACE/counter-microservices-series-docker/configservice/pom.xml clean install"
                  }
             }
         }
