--- a/counter-microservices-series-docker/configservice/Jenkinsfile
+++ b/counter-microservices-series-docker/configservice/Jenkinsfile
@@ -1,9 +1,4 @@
 pipeline {
-  environment {
-    registry = "muralimanohard/microservicesexamples"
-    registryCredential = 'dockerhub'
-    dockerImage = ''
-   }
     agent any 
     stages {
         stage('Git Checkout') {
@@ -18,34 +13,12 @@ pipeline {
                 echo 'Maven Build'
                 dir("counter-microservices-series-docker/configservice") {
                                     withMaven(maven : 'apache-maven-3.6.0') {
-                bat "mvn clean install"
+                bat "mvn clean install -DskipTests"
                  }
                     
                 }
 
             }
         }
-        
-    stage('Building image') {
-      steps{
-        script {
-          dockerImage = docker.build registry + ":$BUILD_NUMBER"
-        }
-      }
-    }
-    stage('Deploy Image') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-            dockerImage.push()
-          }
-        }
-      }
-    }
-    stage('Remove Unused docker image') {
-      steps{
-        bat "docker rmi $registry:$BUILD_NUMBER"
-      }
-    } 
   }
 }
