--- a/counter-microservices-series-docker/counterservice/Jenkinsfile
+++ b/counter-microservices-series-docker/counterservice/Jenkinsfile
@@ -1,9 +1,4 @@
 pipeline {
-  environment {
-    registry = "muralimanohard/microservicesexamples"
-    registryCredential = 'dockerhub'
-    dockerImage = ''
-   }
     agent any 
     stages {
         stage('Git Checkout') {
@@ -15,33 +10,26 @@ pipeline {
         
         stage('Maven Build') {
             steps {
-                echo 'Maven Build' 
-                withMaven(maven : 'apache-maven-3.6.0') {
-                    sh 'mvn clean install -DskipTests'           
-                 }
+                echo 'Maven Build'
+                dir("counter-microservices-series-docker/counterservice") {
+                    withMaven(maven : 'apache-maven-3.6.0') {
+                       bat "mvn clean install -DskipTests"
+                    }
+                    
+                }
+
             }
         }
         
-    stage('Building image') {
-      steps{
-        script {
-          dockerImage = docker.build registry + ":$BUILD_NUMBER"
-        }
-      }
-    }
-    stage('Deploy Image') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-            dockerImage.push()
-          }
-        }
-      }
-    }
-    stage('Remove Unused docker image') {
-      steps{
-        sh "docker rmi $registry:$BUILD_NUMBER"
-      }
-    } 
+        stage('Docker Purge') {
+           steps {
+              echo 'Deleting docker images'
+              bat 'docker image prune -fa'
+
+         deleteDir()
+
+         }
+
+     }
   }
 }
