--- a/jenkins-parameterized-demo/Jenkinsfile
+++ b/jenkins-parameterized-demo/Jenkinsfile
@@ -1,4 +1,4 @@
-properties([parameters([choice(choices: ['master', 'featute1', 'feature2'], description: 'Select the branch to build', name: 'branch')])])
+properties([parameters([choice(choices: 'master\nfeatute1\nfeature2', description: 'Select the branch to build', name: 'branch')])])
 pipeline {
     agent any 
     stages {
